Fix header x overflow and copyright date

--- a/css/_main.scss
+++ b/css/_main.scss
@@ -3,6 +3,7 @@
 body {
   background: $main-color-1;
   position: relative;
+  overflow-x: hidden;
 }
 
 html {
